/*
 * $Id: ChangeLog,v 1.2109 2004/01/21 11:42:13 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-21 10:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * include/hbapi.h
   * include/hbapiitm.h
   * include/hbdefs.h
   * include/hbvm.h
   * source/vm/itemapi.c
   * source/vm/hvm.c
     % Optimizations in the arithmetic operations of interger numbers.
       Now the arithmetic operations with integer numbers are faster than
       with numbers in floating point.

2004-01-21 18:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/genc.c
    ! overlooked fix on critical section.

2004-01-21 13:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/harbour.c
  * source/compiler/genc.c
    ! harbour.exe now supports long PRG file name with white space.
    ! fixes to use original PRG file name as part of symbol name.

2004-01-21 17:09 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /contrib/winprn/tprint.prg
     + CreateFont() - fix iWidth calculation if iDiv < 0

2004-01-21 00:55 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/saverest.c
    ! Check for valid coords
      TPopup:open is passing coords upside down to savescreen()
      which then all gts return very weird rectsizes.

2004-01-21 13:50 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  + /contrib/winprn - new (basic) Windows GDI printing class & test program
     + tprint.prg
     + testprn.prg
     + makefile
     * Possible standard Windows printing for GDI mode
     *   - Uploaded for review and discussion regarding inclusion in
     *     base RTL
     *  Note: makefile is for BCC55

2003-01-20 0:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/gtwin/gtwin.c
    ! Fix restore of original Windows'console size.
      This fix is visible in Win2000 and WinXP if use buffer size